[html, css] projects modal window markup

--- a/index.html
+++ b/index.html
@@ -410,6 +410,33 @@
             </div>
           </div>
         </div>
+        <div class="modal">
+          <div class="modal-contents">
+            <div class="modal-project-left">
+              <img
+                src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
+                alt="yogasite-result"
+                class="modal-project-gif"
+              />
+            </div>
+            <div class="modal-divide"></div>
+            <div class="modal-project-right">
+              <span class="modal-project-tag">Mark up</span>
+              <h4 class="modal-project-title">디자인 시안 1 마크업</h4>
+              <div class="modal-project-description">
+                <span
+                  >Yoga Site Mark Up Porject. From an image template to a
+                  resposive web site.</span
+                >
+              </div>
+              <div class="modal-project-stacks">
+                <span>HTML</span>
+                <span>CSS</span>
+              </div>
+              <button class="closeModal">X</button>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Contact -->
       <section id="contact" class="section contact">
