[html, css] modal projects done
need to add a scroll stop when a modal is opened

--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
       <section id="projects" class="section projects">
         <div class="wrap">
           <h1>Projects</h1>
-          <!-- <h3>Front-end projects</h3> -->
           <!-- project 항목 선택(마크업 / 동적 웹사이트 / 리액트 웹앱 프로젝트) -->
           <div class="projects-container">
             <div class="project-categories">
@@ -243,7 +242,10 @@
             <div class="project-list swiper">
               <div class="projects-list-wrap swiper-wrapper">
                 <!-- mark up 1 -->
-                <div class="project-each swiper-slide" data-type="Mark-up">
+                <div
+                  class="project-each mark-up1 swiper-slide"
+                  data-type="Mark-up"
+                >
                   <h4 class="each-project-title">디자인 시안 1 마크업</h4>
                   <a
                     href="https://jisu-y.github.io/Yoga-web-site/"
@@ -255,29 +257,13 @@
                       alt="yogasite-result"
                       class="each-project-img"
                     />
-                    <!-- <img
-                      src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
-                      alt="yogasite-result"
-                      class="each-project-gif"
-                    /> -->
                   </a>
-                  <!-- <div class="des-container-right">
-                    <h4 class="each-project-title">디자인 시안 1 마크업</h4>
-                    <div class="each-project-description">
-                      <span
-                        >Yoga Site Mark Up Porject. From an image template to a
-                        resposive web site.</span
-                      >
-                    </div>
-                    <span class="each-project-tag">Mark up</span>
-                    <div class="each-project-stacks">
-                      <span>HTML</span>
-                      <span>CSS</span>
-                    </div>
-                  </div> -->
                 </div>
                 <!-- mark up 2 -->
-                <div class="project-each swiper-slide" data-type="Mark-up">
+                <div
+                  class="project-each mark-up2 swiper-slide"
+                  data-type="Mark-up"
+                >
                   <h4 class="each-project-title">디자인 시안 2 마크업</h4>
                   <a
                     href="https://jisu-y.github.io/Snow_website/"
@@ -289,29 +275,13 @@
                       alt="design1-result"
                       class="each-project-img"
                     />
-                    <!-- <img
-                      src="videos/Snow website - Chrome 2021-09-20 13-49-34.gif"
-                      alt="yogasite-result"
-                      class="each-project-gif"
-                    /> -->
                   </a>
-                  <!-- <div class="des-container-right">
-                    <h4 class="project-title">디자인 시안 2 마크업</h4>
-                    <div class="each-project-description">
-                      <span
-                        >Snow Site(an agency portfolio template) Mark Up
-                        Porject. From a template to a resposive web site.</span
-                      >
-                    </div>
-                    <span class="each-project-tag">Mark up</span>
-                    <div class="each-project-stacks">
-                      <span>HTML</span>
-                      <span>CSS</span>
-                    </div>
-                  </div> -->
                 </div>
                 <!-- mark up 3 -->
-                <div class="project-each swiper-slide" data-type="Mark-up">
+                <div
+                  class="project-each mark-up3 swiper-slide"
+                  data-type="Mark-up"
+                >
                   <h4 class="each-project-title">디자인 시안 3 마크업</h4>
                   <a
                     href="https://jisu-y.github.io/AgataBielen-web-site/"
@@ -323,29 +293,13 @@
                       alt="Agata-result_small"
                       class="each-project-img"
                     />
-                    <!-- <img
-                      src="videos/Agata Bielen - Chrome 2021-09-20 13-50-59.gif"
-                      alt="yogasite-result"
-                      class="each-project-gif"
-                    /> -->
                   </a>
-                  <!-- <div class="des-container-right">
-                    <h4 class="project-title">디자인 시안 3 마크업</h4>
-                    <div class="each-project-description">
-                      <span
-                        >Agata Bielen Site Mark Up Porject. From an image
-                        template to a resposive web site.</span
-                      >
-                    </div>
-                    <span class="each-project-tag">Mark up</span>
-                    <div class="each-project-stacks">
-                      <span>HTML</span>
-                      <span>CSS</span>
-                    </div>
-                  </div> -->
                 </div>
                 <!-- when & where -->
-                <div class="project-each swiper-slide" data-type="Active-web">
+                <div
+                  class="project-each Active-web1 swiper-slide"
+                  data-type="Active-web"
+                >
                   <h4 class="each-project-title">반응형 웹사이트</h4>
                   <a
                     href="http://unnatural-legs.surge.sh/"
@@ -357,52 +311,17 @@
                       alt="design1-result"
                       class="each-project-img"
                     />
-                    <!-- <img
-                      src="videos/My Weather for Travel App - Chrome 2021-07-03 21-31-10.gif"
-                      alt="yogasite-result"
-                      class="each-project-gif"
-                    /> -->
                   </a>
-                  <!-- <div class="des-container-right">
-                    <h4 class="project-title">
-                      반응형 웹사이트 with JS / When & Where?
-                    </h4>
-                    <div class="each-project-description">
-                      <span
-                        >세계 여행에 필요한 월별 기후를 알려주는 Web site</span
-                      >
-                    </div>
-                    <span class="each-project-tag">Active Web</span>
-                    <div class="each-project-stacks">
-                      <span>HTML</span>
-                      <span>CSS</span>
-                      <span>Vanila JS</span>
-                    </div>
-                  </div> -->
                 </div>
                 <!-- react app -->
-                <div class="project-each swiper-slide" data-type="React-web">
+                <div
+                  class="project-each React-web1 swiper-slide"
+                  data-type="React-web"
+                >
                   <h4 class="each-project-title">React Web App</h4>
                   <a href="" class="image-link" target="blank">
                     <img src="imgs/user1.png" alt="" class="each-project-img" />
-                    <!-- <img
-                      src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
-                      alt="yogasite-result"
-                      class="each-project-gif"
-                    /> -->
                   </a>
-                  <!-- <div class="des-container-right">
-                    <h4 class="project-title">React Web App</h4>
-                    <div class="each-project-description">
-                      <span>clone coding with java and android3</span>
-                    </div>
-                    <span class="each-project-tag">React-web-app</span>
-                    <div class="each-project-stacks">
-                      <span>React</span>
-                      <span>Express</span>
-                      <span>Mongoose</span>
-                    </div>
-                  </div> -->
                 </div>
               </div>
               <div class="swiper-button-prev"></div>
@@ -410,28 +329,183 @@
             </div>
           </div>
         </div>
-        <div class="modal">
+        <!-- Mark up 1 modal -->
+        <div class="modal mark-up1 hidden" data-type="Mark-up">
           <div class="modal-contents">
-            <div class="modal-project-left">
+            <a
+              href="https://jisu-y.github.io/Yoga-web-site/"
+              class="modal-project-left"
+              target="blank"
+            >
               <img
                 src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
                 alt="yogasite-result"
                 class="modal-project-gif"
               />
-            </div>
+            </a>
             <div class="modal-divide"></div>
             <div class="modal-project-right">
               <span class="modal-project-tag">Mark up</span>
-              <h4 class="modal-project-title">디자인 시안 1 마크업</h4>
+              <h4 class="modal-project-title">디자인 시안 마크업 1</h4>
               <div class="modal-project-description">
                 <span
-                  >Yoga Site Mark Up Porject. From an image template to a
-                  resposive web site.</span
-                >
+                  >Yoga Site Mark Up Porject. <br />
+                  From an image template to a resposive web site. <br />
+                  Yoga site를 디자인 레이아웃에 따라 마크업하였습니다. media
+                  query를 적용하여 반응형으로 구성하였습니다.
+                </span>
               </div>
               <div class="modal-project-stacks">
                 <span>HTML</span>
                 <span>CSS</span>
+              </div>
+              <button class="closeModal">X</button>
+            </div>
+          </div>
+        </div>
+        <!-- Mark up 2 modal -->
+        <div class="modal mark-up2 hidden" data-type="Mark-up">
+          <div class="modal-contents">
+            <a
+              href="https://jisu-y.github.io/Snow_website/"
+              class="modal-project-left"
+              target="blank"
+            >
+              <img
+                src="videos/Snow website - Chrome 2021-09-20 13-49-34.gif"
+                alt="snowsite-result"
+                class="modal-project-gif"
+              />
+            </a>
+            <div class="modal-divide"></div>
+            <div class="modal-project-right">
+              <span class="modal-project-tag">Mark up</span>
+              <h4 class="modal-project-title">디자인 시안 마크업 2</h4>
+              <div class="modal-project-description">
+                <span
+                  >Snow Site(an agency portfolio template) Mark Up Porject.
+                  <br />
+                  From a template to a resposive web site. <br />
+                  Snow site(web agency 포트폴리오 템플릿 사이트)
+                  마크업하였습니다. media query를 적용하여 반응형으로
+                  구성하였습니다.
+                </span>
+              </div>
+              <div class="modal-project-stacks">
+                <span>HTML</span>
+                <span>CSS</span>
+              </div>
+              <button class="closeModal">X</button>
+            </div>
+          </div>
+        </div>
+        <!-- Mark up 3 modal -->
+        <div class="modal mark-up3 hidden" data-type="Mark-up">
+          <div class="modal-contents">
+            <a
+              href="https://jisu-y.github.io/AgataBielen-web-site/"
+              class="modal-project-left"
+              target="blank"
+            >
+              <img
+                src="videos/My Weather for Travel App - Chrome 2021-07-03 21-31-10.gif"
+                alt="yogasite-result"
+                class="modal-project-gif"
+              />
+            </a>
+            <div class="modal-divide"></div>
+            <div class="modal-project-right">
+              <span class="modal-project-tag">Mark up</span>
+              <h4 class="modal-project-title">디자인 시안 마크업 3</h4>
+              <div class="modal-project-description">
+                <span
+                  >Agata Bielen Site Mark Up Porject.
+                  <br />
+                  From an image template to a resposive web site. <br />
+                  Agata Bielen Site(화장품 관련 소개 사이트) 마크업하였습니다.
+                  media query를 적용하여 반응형으로 구성하였습니다.
+                </span>
+              </div>
+              <div class="modal-project-stacks">
+                <span>HTML</span>
+                <span>CSS</span>
+              </div>
+              <button class="closeModal">X</button>
+            </div>
+          </div>
+        </div>
+        <!--  when & where Modal -->
+        <div class="modal Active-web1 hidden" data-type="Active-web">
+          <div class="modal-contents">
+            <a
+              href="http://unnatural-legs.surge.sh/"
+              class="modal-project-left"
+              target="blank"
+            >
+              <img
+                src="videos/My Weather for Travel App - Chrome 2021-07-03 21-31-10.gif"
+                alt="agatasite-result"
+                class="modal-project-gif"
+              />
+            </a>
+            <div class="modal-divide"></div>
+            <div class="modal-project-right">
+              <span class="modal-project-tag">Active web</span>
+              <h4 class="modal-project-title">when & where</h4>
+              <div class="modal-project-description">
+                <span
+                  >반응형 웹 사이트 개인 프로젝트
+                  <br />
+                  세계 여행에 필요한 월별 기후를 알려주는 Web site 입니다.<br />
+                  검색창에 영어 기준 국가명을 검색할 수 있고, 월을 선택하여
+                  선택된 국가의 해당 월의 기후(평균 기온, 강수량, 일교차)를 알
+                  수 있습니다. 모든 기능은 plugin 없이 vanila JS로
+                  구현하였습니다.
+                </span>
+              </div>
+              <div class="modal-project-stacks">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>Vanila JS</span>
+              </div>
+              <button class="closeModal">X</button>
+            </div>
+          </div>
+        </div>
+        <!-- React App Modal  -->
+        <div class="modal React-web1 hidden" data-type="React-web">
+          <div class="modal-contents">
+            <a
+              href="http://unnatural-legs.surge.sh/"
+              class="modal-project-left"
+              target="blank"
+            >
+              <img
+                src="videos/Agata Bielen - Chrome 2021-09-20 13-50-59.gif"
+                alt="agatasite-result"
+                class="modal-project-gif"
+              />
+            </a>
+            <div class="modal-divide"></div>
+            <div class="modal-project-right">
+              <span class="modal-project-tag">React web</span>
+              <h4 class="modal-project-title">Post It!</h4>
+              <div class="modal-project-description">
+                <span
+                  >Full Stack(MERN Stack) 개인 프로젝트
+                  <br />
+                  하고자 하는 일을 떠오르는대로 등록하고, Post it 처럼 원하는
+                  곳에 붙일 수 있도록 만든 사이트.<br />
+                  Post의 속성(Today to do, Later to do ...) 선택 설정 가능 Post
+                  내의 to do 목록 complete, delete, update 가능 Login User만
+                  Post it 생성/수정/삭제할 수 있도록 함 Google Login 및 JWT
+                  Login 구현 Express와 Mongoose를 이용한 Backend 및 DB 구축
+                </span>
+              </div>
+              <div class="modal-project-stacks">
+                <span>React</span>
+                <span>Express(Node.js)</span>
+                <span>Mongoose(MongoDB)</span>
               </div>
               <button class="closeModal">X</button>
             </div>
