--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="wrap">
           <h1 class="slide-right">SUMMARY</h1>
           <div class="main-container slide-left">
+            <p class="cover-letter">cover letter</p>
             <div class="details">
               <!-- <div class="details-wrap">
                 <img src="imgs/Profile.jpg" alt="profileImage" />
@@ -52,8 +53,8 @@
                   <span>안녕하세요, 신입 프론트엔드 개발자 유지수입니다.</span>
                   <br />
                   <br />
-                  전자공학도로서 여러 토이 프로젝트를 진행해보며 만든 결과물에
-                  뿌듯함과 성취감을 느껴왔습니다.<br />
+                  전자공학도로서 프로젝트를 진행해보며 만든 결과물에 뿌듯함과
+                  성취감을 느껴왔습니다.<br />
                   하지만 HW 부품없이 내가 원하는 것을 만들 수는 없을까?<br />
                   라는 질문에서부터 시작하여 웹 프론트엔드를 공부하며 나아가고
                   있습니다.<br /><br />
@@ -62,6 +63,7 @@
                 <button class="btn-resume">이력서 다운</button>
               </div>
             </div>
+            <p class="previews">previews</p>
             <div class="preview">
               <div class="preview-skills" data-set="#skills">
                 <span class="this">Skills</span>
@@ -247,17 +249,13 @@
                   data-type="Mark-up"
                 >
                   <h4 class="each-project-title">디자인 시안 1 마크업</h4>
-                  <a
-                    href="https://jisu-y.github.io/Yoga-web-site/"
-                    class="image-link"
-                    target="blank"
-                  >
+                  <div class="image-link">
                     <img
                       src="imgs/yogaSiteMarkup.jpg"
                       alt="yogasite-result"
                       class="each-project-img"
                     />
-                  </a>
+                  </div>
                 </div>
                 <!-- mark up 2 -->
                 <div
@@ -265,17 +263,13 @@
                   data-type="Mark-up"
                 >
                   <h4 class="each-project-title">디자인 시안 2 마크업</h4>
-                  <a
-                    href="https://jisu-y.github.io/Snow_website/"
-                    class="image-link"
-                    target="blank"
-                  >
+                  <div class="image-link">
                     <img
                       src="imgs/snowSiteMarkup3.JPG"
                       alt="design1-result"
                       class="each-project-img"
                     />
-                  </a>
+                  </div>
                 </div>
                 <!-- mark up 3 -->
                 <div
@@ -283,17 +277,13 @@
                   data-type="Mark-up"
                 >
                   <h4 class="each-project-title">디자인 시안 3 마크업</h4>
-                  <a
-                    href="https://jisu-y.github.io/AgataBielen-web-site/"
-                    class="image-link"
-                    target="blank"
-                  >
+                  <div class="image-link">
                     <img
                       src="imgs/AgataSiteMarkup_small.JPG"
                       alt="Agata-result_small"
                       class="each-project-img"
                     />
-                  </a>
+                  </div>
                 </div>
                 <!-- when & where -->
                 <div
@@ -301,17 +291,13 @@
                   data-type="Active-web"
                 >
                   <h4 class="each-project-title">반응형 웹사이트</h4>
-                  <a
-                    href="http://unnatural-legs.surge.sh/"
-                    class="image-link"
-                    target="blank"
-                  >
+                  <div class="image-link">
                     <img
                       src="imgs/webproject1.PNG"
                       alt="design1-result"
                       class="each-project-img"
                     />
-                  </a>
+                  </div>
                 </div>
                 <!-- react app -->
                 <div
@@ -319,9 +305,9 @@
                   data-type="React-web"
                 >
                   <h4 class="each-project-title">React Web App</h4>
-                  <a href="" class="image-link" target="blank">
+                  <div class="image-link">
                     <img src="imgs/user1.png" alt="" class="each-project-img" />
-                  </a>
+                  </div>
                 </div>
               </div>
               <div class="swiper-button-prev"></div>
@@ -408,7 +394,7 @@
               target="blank"
             >
               <img
-                src="videos/My Weather for Travel App - Chrome 2021-07-03 21-31-10.gif"
+                src="videos/Agata Bielen - Chrome 2021-09-20 13-50-59.gif"
                 alt="yogasite-result"
                 class="modal-project-gif"
               />
