project contents modified and more
project each center

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
                   <div class="each-image">
                     <strong>React</strong>
-                    <img src="imgs/webproject1.PNG" alt="reactproject1" />
+                    <img src="imgs/PostItApp.JPG" alt="reactproject1" />
                   </div>
                 </div>
                 <div class="buttons-container">
@@ -234,10 +234,10 @@
                 Mark Up
               </button>
               <button class="category-btn active-web" data-filter="Active-web">
-                Active Web Site
+                Web Site
               </button>
               <button class="category-btn react-web" data-filter="React-web">
-                React Web App
+                React App
               </button>
             </div>
             <!-- 항목에 따른 projects 리스트들 -->
@@ -290,7 +290,7 @@
                   class="project-each Active-web1 swiper-slide"
                   data-type="Active-web"
                 >
-                  <h4 class="each-project-title">반응형 웹사이트</h4>
+                  <h4 class="each-project-title">When & Where</h4>
                   <div class="image-link">
                     <img
                       src="imgs/webproject1.PNG"
@@ -304,9 +304,13 @@
                   class="project-each React-web1 swiper-slide"
                   data-type="React-web"
                 >
-                  <h4 class="each-project-title">React Web App</h4>
+                  <h4 class="each-project-title">Post It!</h4>
                   <div class="image-link">
-                    <img src="imgs/user1.png" alt="" class="each-project-img" />
+                    <img
+                      src="imgs/PostItApp.JPG"
+                      alt=""
+                      class="each-project-img"
+                    />
                   </div>
                 </div>
               </div>
@@ -337,8 +341,9 @@
                 <span
                   >Yoga Site Mark Up Porject. <br />
                   From an image template to a resposive web site. <br />
-                  Yoga site를 디자인 레이아웃에 따라 마크업하였습니다. media
-                  query를 적용하여 반응형으로 구성하였습니다.
+                  Yoga site를 PSD 시안에 따라 마크업<br />
+                  Media query를 적용하여 반응형으로 구성<br />
+                  Web Design 시안 출처: https://www.freepik.com/psd/
                 </span>
               </div>
               <div class="modal-project-stacks">
@@ -372,9 +377,10 @@
                   >Snow Site(an agency portfolio template) Mark Up Porject.
                   <br />
                   From a template to a resposive web site. <br />
-                  Snow site(web agency 포트폴리오 템플릿 사이트)
-                  마크업하였습니다. media query를 적용하여 반응형으로
-                  구성하였습니다.
+                  Snow site(web agency 포트폴리오 템플릿 사이트)를 PSD 시안에
+                  따라 마크업 <br />
+                  media query를 적용하여 반응형으로 구성<br />
+                  Web Design 시안 출처: https://dribbble.com/sudinasa
                 </span>
               </div>
               <div class="modal-project-stacks">
@@ -408,8 +414,10 @@
                   >Agata Bielen Site Mark Up Porject.
                   <br />
                   From an image template to a resposive web site. <br />
-                  Agata Bielen Site(화장품 관련 소개 사이트) 마크업하였습니다.
-                  media query를 적용하여 반응형으로 구성하였습니다.
+                  Agata Bielen Site(엑세서리 매장 사이트)를 PSD 시안에 따라
+                  마크업 <br />media query를 적용하여 반응형으로 구성<br />Web
+                  Design 시안 출처:
+                  https://freebiesbug.com/psd-freebies/agata-bielen-psd-template/
                 </span>
               </div>
               <div class="modal-project-stacks">
@@ -436,17 +444,18 @@
             </a>
             <div class="modal-divide"></div>
             <div class="modal-project-right">
-              <span class="modal-project-tag">Active web</span>
+              <span class="modal-project-tag">Web Site</span>
               <h4 class="modal-project-title">when & where</h4>
               <div class="modal-project-description">
                 <span
-                  >반응형 웹 사이트 개인 프로젝트
+                  >웹 사이트 개인 프로젝트
                   <br />
-                  세계 여행에 필요한 월별 기후를 알려주는 Web site 입니다.<br />
-                  검색창에 영어 기준 국가명을 검색할 수 있고, 월을 선택하여
-                  선택된 국가의 해당 월의 기후(평균 기온, 강수량, 일교차)를 알
-                  수 있습니다. 모든 기능은 plugin 없이 vanila JS로
-                  구현하였습니다.
+                  세계 여행에 필요한 나라별/월별 기후를 알려주는 Web Site<br />
+                  worldbank - Climate Data API 사용<br />
+                  검색창에 국가명(영어 기준)을 검색, 자동 추천 기능<br />
+                  월을 선택하여 선택된 국가의 해당 월의 기후(평균 기온, 강수량,
+                  일교차)를 그에 맞는 이미지와 함께 확인 가능<br />
+                  모든 기능은 plugin없이 vanila JS로 구현
                 </span>
               </div>
               <div class="modal-project-stacks">
@@ -462,30 +471,30 @@
         <div class="modal React-web1 hidden" data-type="React-web">
           <div class="modal-contents">
             <a
-              href="http://unnatural-legs.surge.sh/"
+              href="https://blissful-colden-0f6a2a.netlify.app/"
               class="modal-project-left"
               target="blank"
             >
               <img
-                src="videos/Agata Bielen - Chrome 2021-09-20 13-50-59.gif"
+                src="videos/PostIt App - Chrome 2021-09-27 15-11-59.gif"
                 alt="agatasite-result"
                 class="modal-project-gif"
               />
             </a>
             <div class="modal-divide"></div>
             <div class="modal-project-right">
-              <span class="modal-project-tag">React web</span>
+              <span class="modal-project-tag">React App</span>
               <h4 class="modal-project-title">Post It!</h4>
               <div class="modal-project-description">
                 <span
                   >Full Stack(MERN Stack) 개인 프로젝트
                   <br />
-                  하고자 하는 일을 떠오르는대로 등록하고, Post it 처럼 원하는
-                  곳에 붙일 수 있도록 만든 사이트.<br />
-                  Post의 속성(Today to do, Later to do ...) 선택 설정 가능 Post
-                  내의 to do 목록 complete, delete, update 가능 Login User만
-                  Post it 생성/수정/삭제할 수 있도록 함 Google Login 및 JWT
-                  Login 구현 Express와 Mongoose를 이용한 Backend 및 DB 구축
+                  Post it처럼 원하는 곳에 붙일 수 있는 Web App<br />
+                  Post 속성(Today/Later/Important..) 선택 설정 가능<br />
+                  Post내 to do 목록 complete, delete, update 가능<br />
+                  Google Login 및 JWT Login 구현<br />
+                  Login User만 Post it 생성/수정/삭제 가능(Auth)<br />
+                  Express와 Mongoose로 Backend 및 DB 구축
                 </span>
               </div>
               <div class="modal-project-stacks">
